@@ -1,0 +1,22 @@
+data_reader {
+  reader {
+    name: "hdf5_data_reader"
+    role: "train"
+    sample_list: "/p/vast1/lbann/datasets/HRRL/pub/sample_list/expv3_train.sample_list"
+    validation_percent: 0.1
+    tournament_percent: 0.1
+    percent_of_data_to_use: 1.0
+    data_schema_filename: "/p/vast1/lbann/datasets/HRRL/pub/hrrl_data_schema_h5_04Jun2021.yaml"
+    experiment_schema_filename: "/p/vast1/lbann/datasets/HRRL/pub/hrrl_experiment_schema.yaml"
+    enable_responses: true
+  }
+  reader {
+    name: "hdf5_data_reader"
+    role: "test"
+    sample_list: "/p/vast1/lbann/datasets/HRRL/pub/sample_list/expv3_test.sample_list"
+    percent_of_data_to_use: 1.0
+    data_schema_filename: "/p/vast1/lbann/datasets/HRRL/pub/hrrl_data_schema_h5_04Jun2021.yaml"
+    experiment_schema_filename: "/p/vast1/lbann/datasets/HRRL/pub/hrrl_experiment_schema.yaml"
+    enable_responses: true
+  }
+}
