@@ -22,8 +22,8 @@ const std::string hdf5_hrrl_data_sample_id =R"FOO(000000334:
 
 // Here is how the HRRL data expects its sample to be packed for this experiment schema
 const std::string packed_hdf5_hrrl_data_sample_id =R"FOO(000000334:
-    datum: [456.288777930614, 231.340700217946, 113.528447010204, 115.115911382861, 116.716861149023, 118.331222098325, 120.52874207647, 122.175220756304, 123.834871115725, 125.507597035081, 126.011234474661, 123.587537036166]
-    response: [15.2486634101312, 0.0426354341969429, 64037572840.4818, 5.34505173275895, 32.6826031770453]
+    samples: [456.288777930614, 231.340700217946, 113.528447010204, 115.115911382861, 116.716861149023, 118.331222098325, 120.52874207647, 122.175220756304, 123.834871115725, 125.507597035081, 126.011234474661, 123.587537036166]
+    responses: [15.2486634101312, 0.0426354341969429, 64037572840.4818, 5.34505173275895, 32.6826031770453]
 )FOO";
 
 const std::string hdf5_hrrl_data_schema_test = R"AurthurDent(
