@@ -30,6 +30,7 @@ Model portability & usability:
 
 Experiments & Applications:
  - Example for training Transformer model with D&SP and D&SP-cSub
+ - PROBIESNet model for HRRL data
 
 Internal features:
  - Added operator class
